Improving visual part

--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
         var userLocationMarker = null; // Variable para almacenar el marcador de la ubicación del usuario
         var gpxLayer = null; // Variable para almacenar la capa GPX
 
+        // Estilo para el punto de ubicación del usuario
+        var userLocationStyle = {
+            radius: 10,
+            fillColor: "#3388ff", // Azul
+            color: "#000",
+            weight: 1,
+            opacity: 1,
+            fillOpacity: 0.7
+        };
+
         // Función para manejar errores y mostrar mensajes al usuario
         function showError(message) {
             var errorMessageElement = document.getElementById('error-message');
@@ -117,7 +127,7 @@
                             userLocationMarker.setLatLng([lat, lng]); // Actualiza la posición del marcador
                         } else {
                             // Crea el marcador de la ubicación del usuario si no existe
-                            userLocationMarker = L.marker([lat, lng]).addTo(map);
+                            userLocationMarker = L.circleMarker([lat, lng], userLocationStyle).addTo(map);
                             userLocationMarker.bindPopup("Tu ubicación").openPopup(); // Añade un popup
                         }
                     },
@@ -154,7 +164,6 @@
         // Event listeners
         document.getElementById('fileInput').addEventListener('change', handleFileSelect);
         window.onload = getLocation; // Obtener la ubicación del usuario al cargar la página
-
 
         // Service Worker para funcionalidad offline
         if ('serviceWorker' in navigator) {
